fix: horizontal scroll by 320px & change btn in fet-touch

--- a/src/sass/blocks/_menu.sass
+++ b/src/sass/blocks/_menu.sass
@@ -88,7 +88,7 @@
   &__entrance
     display: flex
     align-items: center
-    padding: 15px
+    padding: 15px 10px
     color: $blue
 
     &:hover,
@@ -125,7 +125,7 @@
   &__button
     display: flex
     align-items: center
-    padding: 15px
+    padding: 15px 10px
     background-color: $blue
     border-radius: 5px
     cursor: pointer
@@ -172,7 +172,7 @@
 
     @media (max-width: 885px)
       display: flex
-      padding: 15px 15px
+      padding: 15px 10px
 
   &__text
     &-login
